gccida/g3/ix86_split_long_move
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9213:4: error: expected ';' after expression
rtx tmp; // [rsp+0h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9213:5: error: use of undeclared identifier 'tmp'
rtx tmp; // [rsp+0h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9214:4: error: expected ';' after expression
rtx x[2]; // [rsp+8h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9214:5: error: use of undeclared identifier 'x'
rtx x[2]; // [rsp+8h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9215:4: error: expected ';' after expression
rtx parts; // [rsp+18h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9215:5: error: use of undeclared identifier 'parts'
rtx parts; // [rsp+18h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9216:4: error: expected ';' after expression
rtx y; // [rsp+20h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9216:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+20h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9217:4: error: expected ';' after expression
rtx v40; // [rsp+28h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9217:5: error: use of undeclared identifier 'v40'
rtx v40; // [rsp+28h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9226:50: error: use of undeclared identifier 'machine_mode'
v6 = ix86_split_to_parts( operands[1], &parts, ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9226:41: error: use of undeclared identifier 'parts'; did you mean 'puts'?
v6 = ix86_split_to_parts( operands[1], &parts, ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                        ^~~~~
                                        puts
/usr/include/stdio.h:632:12: note: 'puts' declared here
extern int puts (const char *__s);
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9227:41: error: use of undeclared identifier 'machine_mode'
ix86_split_to_parts( *operands, &tmp, ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9227:34: error: use of undeclared identifier 'tmp'
ix86_split_to_parts( *operands, &tmp, ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9231:7: error: use of undeclared identifier 'y'
v25 = y; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9234:1: error: use of undeclared identifier 'y'
y = change_address( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), v40->fld[0].rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9234:26: error: use of undeclared identifier 'machine_mode'
y = change_address( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), v40->fld[0].rtx); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9234:62: error: use of undeclared identifier 'y'
y = change_address( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), v40->fld[0].rtx); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/i386.c:9234:21: error: use of undeclared identifier 'y'
y = change_address( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), v40->fld[0].rtx); 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_split_long_move/src/obj/i386.o] Error 1
